cfx-frontend/src/app/modules/shared/components/request-notification/request-stepper/request-stepper.component.scss
@import '../../../../../../theme/base.scss';
@tailwind base;

.container {
  width: 850px;
  max-height: 800px;
  overflow-y: hidden;
  margin-right: 0.5px;
  min-width: 850px !important;

  @media (max-width: 1100px) {
    padding-right: 20px;
  }

  @media (max-width: 1200px) {
    max-width: 850px;
    min-width: 850px;
    overflow-x: auto;
  }
  @media (max-height: 800px) {
    height: 500px;
    overflow-y: auto;
    padding-left: 5px;
    padding-right: 5px;
  }
}

.header {
  @extend .headline-medium;
  font-size: 32px;
  font-weight: 600;
  line-height: 35.2px;
  color: #333333;

  display: flex;
  justify-content: space-between;
}

.table-header {
  @extend .title-medium;
}

.button-text {
  @extend .label-large;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.1px;
  padding: 0 5px 0 5px;
}

.accept-button-text {
  @extend .button-text;
  @apply text-white;
}

.cancel-button-text {
  @extend .button-text;
  @apply text-black;
}

.buttons-wrapper {
  max-height: 200px;
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.parts-tab-wrapper {
  overflow-y: auto !important;
}

.other-parts-mat-tab-group {
  width: 100%;
  overflow-y: hidden !important;
}

.select-parts-tab {
  @extend .title-large;
  color: #333333;
  padding-left: 10px !important;
}

.define-tab {
  color: #4d4d4d;
}

.step {
  @apply border-0 uppercase rounded-full;
  font-size: 18px;
  font-weight: 700;
  letter-spacing: 0em;
  width: 20px;
  height: 20px;

  &--ACTIVE {
    @apply bg-primary text-white;
  }

  &--INACTIVE {
    @apply bg-inactiveText text-white;
  }

  &--COMPLETED {
    @apply bg-positive text-white;
  }
}

